# rusty-harbor

./: .gitignore  Cargo.toml
derive_harbor/: Cargo.toml
derive_harbor/src/: lib.rs
query_url/: Cargo.toml
query_url/src/: lib.rs
rusty_harbor/: .env  .env.template  Cargo.toml
rusty_harbor/src/: client.rs  lib.rs  request.rs  response.rs
rusty_harbor/src/client/: dispatch.rs  error.rs  tests.rs
rusty_harbor/src/request/: project.rs  v2.rs
rusty_harbor/src/request/project/: get.rs  tests.rs
rusty_harbor/src/request/v2/configure/: get.rs
rusty_harbor/src/request/v2/health/: get.rs
rusty_harbor/src/request/v2/project/: get.rs  head.rs  mod.rs  tests.rs
rusty_harbor/src/request/v2/search/: get.rs
rusty_harbor/src/request/v2/statistics/: get.rs
rusty_harbor/src/response/: errors.rs  project.rs  v2.rs
rusty_harbor/src/response/v2/: maps.rs  types.rs
rusty_harbor/src/response/v2/configure/: mod.rs
rusty_harbor/src/response/v2/health/: mod.rs
rusty_harbor/src/response/v2/project/: maps.rs  mod.rs  types.rs
rusty_harbor/src/response/v2/search/: mod.rs
rusty_harbor/src/response/v2/statistics/: mod.rs
