[package]
name = "rusty_harbor"
version = "0.1.0"
edition = "2024"

[dependencies]
query_url.workspace = true
derive_builder = "0.20"
dotenv = "0.15"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }